--- a/references.bib
+++ b/references.bib
@@ -228,3 +228,17 @@
 	doi = {10.1215/00127094-2011-005},
 	URL = {https://doi.org/10.1215/00127094-2011-005},
 }
+@online{wheeling-a-diagrammatic-analogue-of-the-duflo-isomorphism,
+	title = {Wheeling: A diagrammatic analogue of the Duflo isomorphism},
+	author = {Dylan P. Thurston},
+	journal = {arXiv: Quantum Algebra},
+	year = {2000},
+}
+@article{on-the-rozansky-witten-weight-systems,
+	title = {On the Rozansky-Witten weight systems},
+	author = {Justin Roberts and Simon Willerton},
+	journal = {Algebraic \& Geometric Topology},
+	year = {2006},
+	volume = {10},
+	pages = {1455-1519},
+}
