--- a/setup.tex
+++ b/setup.tex
@@ -179,6 +179,7 @@
 \newtheorem{examples}[theorem]{Examples}
 \newtheorem{remark}[theorem]{Remark}
 \newtheorem{remarks}[theorem]{Remarks}
+\newtheorem{construction}[theorem]{Construction}
 \newtheorem{exercise}[theorem]{Exercise}
 \newtheorem{warning}[theorem]{Warning}
 \newtheorem{question}[theorem]{Question}
