--- a/references.bib
+++ b/references.bib
@@ -225,8 +225,6 @@
 	publisher = {Duke University Press},
 	pages = {223 -- 281},
 	year = {2011},
-	doi = {10.1215/00127094-2011-005},
-	URL = {https://doi.org/10.1215/00127094-2011-005},
 }
 @online{wheeling-a-diagrammatic-analogue-of-the-duflo-isomorphism,
 	title = {Wheeling: A diagrammatic analogue of the Duflo isomorphism},
@@ -241,4 +239,14 @@
 	year = {2006},
 	volume = {10},
 	pages = {1455-1519},
+}
+
+@article{remarks-on-the-vassiliev-knot-invariants-coming-from-sl2,
+	title = {Remarks on the vassiliev knot invariants coming from sl2},
+	journal = {Topology},
+	volume = {36},
+	number = {1},
+	pages = {153-178},
+	year = {1997},
+	author = {S.V. Chmutov and A.N. Varchenko},
 }
