--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -38,7 +38,9 @@ This side of the story reframes the bialgebra \(\mathcal{A}\) as an isomorphic b
 	The vector space of unitrivalent diagrams is denoted \(\mathcal{T}\).
 \end{definition}
 
-When drawing unitrivalent diagrams, we specify the fixed cyclic order of the univalent edges of a unitrivalent diagram by drawing them connected to a circle. In particular all chord diagrams are Jacobi diagrams with only univalent vertices (the chord ends). Further examples of non-chord diagram Jacobi diagrams would be
+When drawing unitrivalent diagrams, there are two notation conventions. Firstly, the fixed cyclic order of the univalent edges of is specified by drawing them connected to a circle (the cyclic order is induced by traversing the circle anticlockwise).  Secondly, all the trivalent vertices are taken with the anticlockwise cyclic ordering unless an arrow around that vertex indicates otherwise.
+
+In particular, from the first point, all chord diagrams are unitrivalent diagrams with only univalent vertices (the chord ends). Further examples of unitrivalent diagrams would be
 \[
 	\includegraphics[width=0.13\textwidth, valign=c]{graphics/unitrivalent_diagram_example_1.pdf} \ ,
 	\quad
@@ -143,17 +145,23 @@ Looking at the relations \ref{eq:STU}, \ref{eq:AS} and \ref{eq:IHX}, the first s
 \end{equation*}
 (here also one application of \ref{eq:AS} was used) whereby the \ref{eq:IHX} looks like the Jacobi identity, in the form \([[x, y], z] = [x, [y, z]] + [y, [x, z]]\).
 
-\begin{lemma}[Generalised IHX]
-	\begin{mdframed}
-		sum of connections into a box equals sum of connections out.
-
-		In particular, sum of connections into a dead end is zero.
-	\end{mdframed}
+\begin{lemma}[Generalised \ref{eq:IHX}]
+	The following holds in \(\mathcal{J}\) for any subgraph consisting of trivalent vertices that can be inserted into the grey box.
+	\[
+		\sum_{i = 0}^{m}\
+		\def\svgscale{0.3}
+		\raisebox{-34pt}{\input{graphics/generalised_ihx_left.pdf_tex}}
+		\quad
+		=
+		\quad
+		\sum_{i = 0}^{n}\
+		\def\svgscale{0.3}
+		\raisebox{-34pt}{\input{graphics/generalised_ihx_right.pdf_tex}}
+	\]
 \end{lemma}
 
-\begin{proof}
-	Morsify. There are only 6 types of vertices you encounter... . Sum of connections is the same on either side, and 
-\end{proof}
+The result is standard, see Chapter 5.2 of \cite{introduction-to-vassiliev-invariants} for a proof.
+% TODO: Maybe I want to prove this.
 
 % TODO: The change of basis assumption here is a liiitle sus.
 We have already spoiled the surprise that in the end, \(\mathcal{A}\) and \(\mathcal{J}\) will be isomorphic as bialgebras. In fact, as algebras, this is clearly true so far, as \(\mathcal{J}\) is just a change of basis from \(\mathcal{A}\). Since \(\mathcal{A}\) spans \(\mathcal{J}\), we can attempt to lift the coproduct from \(\mathcal{A}\) directly onto \(\mathcal{J}\).
@@ -221,7 +229,7 @@ The famous construction of Bar-Natan \cite{on-the-vassiliev-knot-invariants} use
 \end{theorem}
 
 \begin{construction}
-	Given a Lie algebra \(\mathfrak{g}\), the vertex \(m\) with signature \(\mathfrak{g} \otimes \mathfrak{g} \otimes \mathfrak{g}\) is associated to a genuine element of the tensor algebra \(T_{\mathfrak{g}}(m) \in \mathfrak{g}^{\otimes 3}\). For each trivalent vertex of the Jacobi diagram \(J \in \mathcal{A}\), take \(-T_{\mathfrak{g}}(m)\), and take all of their tensor products, in arbitrary order. There being \(v\) trivalent vertices, this lies in \(\mathfrak{g}^{\otimes 3v}\).
+	Given a Lie algebra \(\mathfrak{g}\), the vertex \(m\) with signature \(\mathfrak{g} \otimes \mathfrak{g} \otimes \mathfrak{g}\) is associated to a genuine element of the tensor algebra \(T_{\mathfrak{g}}(m) \in \mathfrak{g}^{\otimes 3}\). For each trivalent vertex of the Jacobi diagram \(J \in \mathcal{A}\), take \(T_{\mathfrak{g}}(m)\), and take all of their tensor products, in arbitrary order. There being \(v\) trivalent vertices, this lies in \(\mathfrak{g}^{\otimes 3v}\).
 
 	For each edge between the trivalent vertices in the Jacobi diagram, contract the corresponding variables in \(\mathfrak{g}^{\otimes 3 v}\). The result lies in \(\mathfrak{g}^{\otimes 3v - 2e}\) where \(e\) is the number of edges between trivalent vertices.
 
@@ -230,41 +238,80 @@ The famous construction of Bar-Natan \cite{on-the-vassiliev-knot-invariants} use
 	A representation \(\rho: \mathfrak{g} \to \operatorname{Hom}(V)\) of \(\mathfrak{g}\) extends uniquely to a representation \(\rho: \mathcal{U}(\mathfrak{g}) \to \operatorname{Hom}(V)\) of \(\mathcal{U}(\mathfrak{g})\). Use this representation to take the trace of \(W_{\mathfrak{g}}(J)\). The result is an element of the ground field \(W_{\mathfrak{g}, \rho}(J) = \operatorname{tr}(\rho(T_{\mathfrak{g}}(J))) \in \mathbb{C}\).
 \end{construction}
 
+\begin{warning}
+	When constructing \(T_{\mathfrak{g}}(m)\), the tensor factors in the tensor corresponding to the bracket need to have the unusual cyclic order \((y, x, [x, y]_{\mathfrak{g}})\). This is because its projection into \(\mathcal{U}(\mathfrak{g})\) should obey \ref{eq:STU}, and this is the cyclic order of the trivalent vertex in \ref{eq:STU}.
+\end{warning}
+
 Hence, we have the functions \(W_{\mathfrak{g}}: \mathcal{A} \to \mathcal{U}(\mathfrak{g})\) and \(W_{\mathfrak{g}, \rho}: \mathcal{A} \to \mathbb{C}\) which we claim are weight systems.
 
 \begin{proof}
-	First, the map \(W_{\mathfrak{g}}\). It is well-defined, as the map on chord diagrams descends to a map modulo \ref{eq:STU} (recall that \ref{eq:STU} implies \ref{eq:AS} and \ref{eq:IHX}). If two chord diagrams differ by \ref{eq:STU}, on some univalent vertices associated with adjacent tensor factors \(x\) and \(y\), the construction gives
+
+	The Penrose diagrams constructed out of the vertices of the type listed above are well-defined as planar graphs \cite[Proposition 3.1.1]{vassiliev-knot-invariants-and-lie-s-algebras}. Thus since the tensor is constructed only from contractions of the above vertices, it is determined by the information of which components are contracted, and their order in the final tensor. This information is encoded by a uni-trivalent graph with an ordering on its univalent vertices.
+
+	To prove that the map \(W_{\mathfrak{g}}: \mathcal{A} \to \mathcal{U}(\mathfrak{g})\) is well-defined it suffices to show that the Penrose diagrams obey the \(\ref{eq:STU}\) relations when interpreted as elements of \(\mathcal{U}(\mathfrak{g})\). If two chord diagrams differ by \ref{eq:STU}, on some univalent vertices associated with adjacent tensor factors \(y\) and \(x\), the construction gives
 	\[\cdots \otimes [x, y]_{\mathfrak{g}} \otimes \cdots \qquad \text{and} \qquad (\cdots \otimes x \otimes y \otimes \cdots) - (\cdots \otimes y \otimes x \otimes \cdots),\]
-	but this equality is exactly the quotient in the universal enveloping algebra.
+	but this equality is exactly the quotient in the \(\mathcal{U}(\mathfrak{g})\).
 
 	Indeed \ref{eq:AS} and \ref{eq:IHX} follow from \ref{eq:STU} but they are also easy to see directly. \(\ref{eq:AS}\) follows from the skew-symmetry of the vertex \(m\), being built out of the bracket, and \(\ref{eq:IHX}\) follows from the Jacobi identity in \(\mathfrak{g}\).
 
-	Finally, there are many possible orders on the tensor factors that agreed with the cyclic order. This amounts to choosing a dinstinguished univalent vertex as the beginning of the order. The relations in \(\mathcal{A}\) imply that all the choices are equivalent.
-	\begin{mdframed}
-		Commute with STU and then use generalised IHX.
-	\end{mdframed}
-	This completes the proof.
+	Finally, a Jacobi diagram's univalent vertices only have a cyclic order. But in the construction a true order respecting that cyclic order was chosen. We should show that any order respecting the cyclic order leads to the same result. It suffices to show that the tensor is cyclically symmetric. Indeed, a stronger statement is true: anything satisfying the \ref{eq:STU} relation is cyclically symmetric. Since it is stronger, let us prove it instead for \(\mathcal{A}\).
+
+	It is equivalent to prove that any Jacobi diagram on a long line is cyclically symmetric. Examine the operation of taking the univalent vertex (which we will here call legs) in the first position and moving it to the last position, reducing by one the positions of all other legs. This generates the cyclic group on the number of univalent vertices, so it is enough to show this operation preserves the Jacobi diagram. The \ref{eq:STU} relation gives the cost of commuting the first leg past the \(i\)th leg: the same diagram with the first leg attached to the \(i\)th leg. Thus cost commuting the first leg to the very last place is the sum over the other legs of attaching it to those legs. We will show that this cost is zero.
+
+	We split this sum by the connected components of the \(i\)th leg. On components that don't contain the first leg, this is the sum, over legs, of the same diagram, with the first leg attached to the \(i\)th leg. This vanishes by the generalised \ref{eq:IHX}. On the component that contains the first leg, this sum is also killed by generalised \ref{eq:IHX}, as it produces a diagram with a loop at the top.
 \end{proof}
 
 \begin{remark}
-	The choice of \(-T_{\mathfrak{g}}(m)\) instead of \(T_{\mathfrak{g}}(m)\) for the tensor product associated to the vertex \(m\), is due to the fact that the cyclic order on \(T_{\mathfrak{g}}(m)\) is \((x, y, [x, y]_{\mathfrak{g}})\).
-
-	Such a vertex looks like
-	\begin{mdframed}
-		this
-	\end{mdframed}
-	which is the wrong way round to read \([x, y] = xy - yx\) in \(\mathcal{U}(\mathfrak{g})\) when the construction is performed.
+	% TODO: Call the Penrose diagrams something consistent throughout.
+	We showed in the proof above that the Penrose diagrams with given vertices obey \ref{eq:STU}. Such an object is starting to look a lot like a Jacobi diagram. We showed that these objects satisfy the \ref{eq:STU} relations, but it's still possible they satisfy more relations than Jacobi diagrams, a statement which we will formalise in Section \ref{sec:non-lie-algebraic-weight-systems}.
 \end{remark}
 
 \begin{mdframed}
-	Example, sl2. We get something with more relations than \(\mathcal{A}\), but clearly since this is a Lie algebra, all the relations of \(\mathcal{A}\) are satisfied. So we get a quotient.
+	Confirm: This obeys all the relations of \(\mathcal{A}\), and more. Does this make it a quotient of \(\mathcal{A}\)?
 \end{mdframed}
 
 Let's look at a specific weight system for the Lie algebra \(\mathfrak{sl}_{2}\) \cite{on-the-vassiliev-knot-invariants, remarks-on-the-vassiliev-knot-invariants-coming-from-sl2}.
 \begin{example}[Weight system for \({\mathfrak{sl}_{2}}\)]
 	We choose as our Lie algebra \(\mathfrak{sl}_{2}\), generated by \(h\), \(e\) and \(f\) with commutators
 	\[[h, e] = 2e, \quad [h, f] = -2f, \quad [e, f] = h.\]
-	The unique invariant form up to scalar multiple is \(\langle x, y \rangle = \)
+	The unique invariant form up to scalar multiple is
+	\[\langle h, h \rangle = 1, \quad \langle e, f \rangle = \frac{1}{2}, \quad \langle f, e \rangle = \frac{1}{2},\]
+	and all other inner products are zero.
+
+	In \cite{remarks-on-the-vassiliev-knot-invariants-coming-from-sl2}, the following skein relation is derived:
+	\[
+		W_{\mathfrak{sl}_{2}}
+		\left(
+			\includegraphics[width=0.115\textwidth, valign=c]{graphics/sl2_skein_relation_h.pdf}
+		\right)
+		=
+		4 W_{\mathfrak{sl}_{2}}
+		\left(
+			\includegraphics[width=0.115\textwidth, valign=c]{graphics/sl2_skein_relation_uu.pdf}
+		\right)
+		-
+		4 W_{\mathfrak{sl}_{2}}
+		\left(
+			\includegraphics[width=0.115\textwidth, valign=c]{graphics/sl2_skein_relation_x.pdf}
+		\right)
+	\]
+
+	\begin{proof}
+		Associated to the Penrose diagram for each side of the above equation (it is not advisable to compute by hand) we find the tensors
+		\begin{align*}
+			{}- 8 h\otimes e\otimes h\otimes f && {}+ 8 & h\otimes e\otimes f\otimes h & {}- \phantom{1}8  & h\otimes f\otimes h\otimes e & {}+ \phantom{1}8  & h\otimes f\otimes e\otimes h \\
+			{}+ 8 e\otimes h\otimes h\otimes f && {}- 8 & e\otimes h\otimes f\otimes h & {}+            16 & e\otimes f\otimes e\otimes f & {}-            16 & e\otimes f\otimes f\otimes e \\
+			{}+ 8 f\otimes h\otimes h\otimes e && {}- 8 & f\otimes h\otimes e\otimes h & {}-            16 & f\otimes e\otimes e\otimes f & {}+            16 & f\otimes e\otimes f\otimes e
+		\end{align*}
+		and
+		\begin{align*}
+			{}+ 8 h\otimes h\otimes e\otimes f && {}+ \phantom{1}8  & h\otimes h\otimes f\otimes e & {}- \phantom{1}8  & h\otimes e\otimes h\otimes f & {}- \phantom{1}8  & h\otimes f\otimes h\otimes e \\
+			{}- 8 e\otimes h\otimes f\otimes h && {}- 16 & e\otimes e\otimes f\otimes f & {}+ \phantom{1}8  & e\otimes f\otimes h\otimes h & {}+ 16 & e\otimes f\otimes e\otimes f \\
+			{}- 8 f\otimes h\otimes e\otimes h && {}+ \phantom{1}8  & f\otimes e\otimes h\otimes h & {}+ 16 & f\otimes e\otimes f\otimes e & {}- 16 & f\otimes f\otimes e\otimes e.
+		\end{align*}
+		Projecting into \(\mathcal{U}(\mathfrak{g})\) and using one's favourite CAS to express both expressions in the Poincare-Birkhoff-Witt basis, we find both equal to
+		\[64 e \otimes f + 16 h \otimes h - 32 h.\]
+	\end{proof}
 \end{example}
 
 \begin{mdframed}
@@ -272,6 +319,7 @@ Let's look at a specific weight system for the Lie algebra \(\mathfrak{sl}_{2}\)
 \end{mdframed}
 
 \section{Non-Lie algebraic weight systems}
+\label{sec:non-lie-algebraic-weight-systems}
 
 \begin{mdframed}
 	The IHX, STU, AS is slightly more than just the jacobi; the tensor algebra isomorphism can be other than the identity (e.g. superalgebras).
