--- a/references.bib
+++ b/references.bib
@@ -250,3 +250,12 @@
 	year = {1997},
 	author = {S.V. Chmutov and A.N. Varchenko},
 }
+@article{vassiliev-knot-invariants-and-lie-s-algebras,
+	title = {Vassiliev knot invariants and Lie S-algebras},
+	author = {Arkady Vaintrob},
+	journal = {Mathematical Research Letters},
+	number = {1},
+	voulme = {10},
+	pages = {579-595},
+	year = {1994},
+}
