--- a/references.bib
+++ b/references.bib
@@ -250,6 +250,7 @@
 	year = {1997},
 	author = {S.V. Chmutov and A.N. Varchenko},
 }
+
 @article{vassiliev-knot-invariants-and-lie-s-algebras,
 	title = {Vassiliev knot invariants and Lie S-algebras},
 	author = {Arkady Vaintrob},
@@ -258,4 +259,14 @@
 	voulme = {10},
 	pages = {579-595},
 	year = {1994},
+}
+
+@article{algebraic-structures-on-modules-of-diagrams,
+	title = {Algebraic structures on modules of diagrams},
+	journal = {Journal of Pure and Applied Algebra},
+	volume = {215},
+	number = {6},
+	pages = {1292-1339},
+	year = {1995},
+	author = {Pierre Vogel},
 }
